tests/dataset/tpc-ds/compiler/c/q59.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  int s_store_id1;
  double ratio;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int week;
  int store;
  double amount;
} sales_year1_t;
typedef struct {
  int len;
  sales_year1_t *data;
} sales_year1_list_t;
sales_year1_list_t create_sales_year1_list(int len) {
  sales_year1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(sales_year1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int week;
  int store;
  double amount;
} sales_year2_t;
typedef struct {
  int len;
  sales_year2_t *data;
} sales_year2_list_t;
sales_year2_list_t create_sales_year2_list(int len) {
  sales_year2_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(sales_year2_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int s_store_id1;
  double ratio;
} join_item_t;
typedef struct {
  int len;
  join_item_t *data;
} join_item_list_t;
join_item_list_t create_join_item_list(int len) {
  join_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(join_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q59_simplified_result;
static void test_TPCDS_Q59_simplified() {
  tmp1_t tmp1[] = {(tmp1_t){.s_store_id1 = 1, .ratio = 1.5}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q59_simplified_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q59_simplified_result.len; i3++) {
      if (test_TPCDS_Q59_simplified_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  sales_year1_t sales_year1[] = {
      (sales_year1_t){.week = 1, .store = 1, .amount = 100.0}};
  int sales_year1_len = sizeof(sales_year1) / sizeof(sales_year1[0]);
  sales_year2_t sales_year2[] = {
      (sales_year2_t){.week = 53, .store = 1, .amount = 150.0}};
  int sales_year2_len = sizeof(sales_year2) / sizeof(sales_year2[0]);
  join_item_list_t tmp4 =
      join_item_list_t_create(sales_year1.len * sales_year2.len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < sales_year1_len; tmp6++) {
    sales_year1_t y1 = sales_year1[tmp6];
    for (int tmp7 = 0; tmp7 < sales_year2_len; tmp7++) {
      sales_year2_t y2 = sales_year2[tmp7];
      if (!(y1.store == y2.store && y1.week == y2.week - 52)) {
        continue;
      }
      tmp4.data[tmp5] = (join_item_t){.s_store_id1 = y1.store,
                                      .ratio = y2.amount / y1.amount};
      tmp5++;
    }
  }
  tmp4.len = tmp5;
  join_item_list_t join = tmp4;
  const char *(*result)(int, const char *) = join;
  _json_int(result);
  test_TPCDS_Q59_simplified_result = result;
  test_TPCDS_Q59_simplified();
  return 0;
}
